# recitations-segmenter

./: .env.example  .gitignore  README.md  apply_augments.py  augment_config.yml  check_corrupted_audiofiles.py  extract_speech_intervals.py  extract_speech_intervals_jobs.py  extract_speech_intervals_normal.py  generate_datasets.py  measure_durations_stats.py  plot_durations.py  push_to_hup.py  pyproject.toml  recitations.yml  search_vad_erros.py  setup_train.sh  test_last_eval.py  train.py  train_requirements.txt
.github/workflows/: publish.yml  tests.yml
assets/: durations.json
hpc_scripts/: apply-augments.sh  extract-speech-intervals-cpu.sh  extract-speech-intervals-jobs.sh  extract-speech-intervals.sh  generate-ds.sh  measuer_durations.sh  push-ds-to-hf.sh  test-segmentation-on-hpc.sh
src/recitations_segmenter/: __init__.py  cli.py  segment.py  utils.py
src/recitations_segmenter/data/: suar_list.json
src/recitations_segmenter/train/: augment.py  process_before_train.py  process_data.py  vad_utils.py
tests/: all_modules.py  all_modules_wihout_cache.py  augment_pytest.py  augment_unitests.py  display_datasets.py  get_audiofiles.py  overwrite_readme_yaml.py  quran_dot_com_api.py  segment_pytest.py  time_stamps.py  vad.py  vad_batch.py
